vlib/v/checker/tests/orm_dynamic_unknown_field_err.vv
import db.sqlite

struct User {
	id   int @[primary; sql: serial]
	name string
}

fn main() {
	db := sqlite.connect(':memory:') or { panic(err) }
	where_expr := {
		if true { zzz == 'Alice' },
	}
	_ := sql db {
		dynamic select from User where where_expr
	}!
}
